# widots

./: Cargo.toml  LICENSE  Makefile.toml  README.md  cliff.toml  release.toml
.github/workflows/: release.yml  rust.yml
completions/: widots.fish
example/.config/widots/: config.toml  config.yml
proptest-regressions/application/services/: link_service.txt
proptest-regressions/infrastructure/: link.txt
src/: cli.rs  constants.rs  error.rs  integration_tests.rs  lib.rs  main.rs
src/application/: app_config.rs  mod.rs  service_provider.rs
src/application/services/: brew_service.rs  deploy_service.rs  fish_service.rs  link_service.rs  load_service.rs  mod.rs  vscode_service.rs
src/commands/: brew.rs  deploy.rs  fish.rs  fisher.rs  link.rs  materialize.rs  mod.rs  run.rs  vscode.rs
src/config/: app_config.rs  constants.rs  mod.rs
src/core/: mod.rs  os.rs  path.rs  shell.rs
src/domain/: deploy.rs  link.rs  mod.rs  os.rs  path.rs  prompt.rs  shell.rs
src/error/: app_error.rs  mod.rs
src/infrastructure/: deploy.rs  fs.rs  link.rs  mod.rs  os.rs  path.rs  prompt.rs
src/infrastructure/shell/: executor.rs
src/logger/: log.rs
src/models/: config.rs  file.rs  link.rs  mod.rs  shell.rs  yaml.rs
src/presentation/cli/: mod.rs
src/presentation/cli/commands/: brew.rs  deploy.rs  fish.rs  link.rs  load.rs  materialize.rs  mod.rs  vscode.rs
src/utils/: io.rs  logger.rs  mod.rs  toml.rs  yaml.rs
tests/: brew_service_tests.rs  config_tests.rs  deploy_service_tests.rs  fish_service_tests.rs  fs_tests.rs  integration_tests.rs  link_service_tests.rs  link_tests.rs  load_service_tests.rs  mod.rs  os_tests.rs  path_tests.rs  prompt_tests.rs  shell_tests.rs  toml_tests.rs  vscode_service_tests.rs
