[package]
exclude = ["tests", "example", ".github", "completions"]
name = "widots"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A personal dotfile manager"
repository = "https://github.com/watarui/widots"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
chrono = "0.4.38"
clap = { version = "4.5.13", features = [
  "color",
  "error-context",
  "help",
  "suggestions",
  "usage",
  "cargo",
  "derive",
  "env",
  "unicode",
  "wrap_help",
  "string",
] }
config = "0.14.0"
dirs = "5.0.1"
fern = { version = "0.6.2", features = ["chrono", "colored"] }
futures = "0.3.30"
inquire = "0.7.5"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
tempfile = "3.11.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"
whoami = "1.5.1"
yaml-rust2 = "0.8.1"

[features]
fish_installed = []
homebrew_installed = []

[dev-dependencies]
mockall = "0.13.0"
